atualização do sector
