# src/sector/dto/updateSector.dto.ts
@@ -1,0 +1,13 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsString, IsOptional } from 'class-validator';
+
+export class UpdateSectorDto {
+  @ApiProperty({
+    description: 'Nome do setor',
+    example: 'Usinagem e Montagem',
+    required: false,
+  })
+  @IsString()
+  @IsOptional()
+  name?: string;
+}
